# Localllm

./: README.md
localllm/: ARCHITECTURE.md  Cargo.toml
localllm/src/: error.rs  main.rs  platform.rs  setup.rs
localllm/src/api/: middleware.rs  mod.rs  routes.rs  types.rs
localllm/src/cli/: commands.rs  mod.rs  render.rs  style.rs
localllm/src/compression/: mod.rs  quantize.rs
localllm/src/config/: mod.rs  settings.rs
localllm/src/daemon/: mod.rs  server.rs
localllm/src/downloader/: file_manager.rs  hf_api.rs  mod.rs
localllm/src/gpu/: mod.rs  vram.rs
localllm/src/inference/: llamacpp.rs  logbuf.rs  mod.rs  sglang.rs
localllm/src/registry/: manifest.rs  mod.rs  modelfile.rs
